--- a/templates/index.html
+++ b/templates/index.html
@@ -6,9 +6,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>IG Downloader</title>
     <link rel="stylesheet" href="/static/styles.css">
+    <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
   </head>
   <body>
     <div class="cont">
+      <div class="info-btn">
+        <i class='bx bx-info-circle bx-sm' id="myBtn"></i>
+      </div>
+
+      <div class="modal" id="modal">
+        <p class="instructions">
+          <span class="close">&times;</span>
+          1. Paste in the link for the video/image <br>
+          2. Enter the filename for the file. (the name the file will be saved with) <br>
+          3. Choose whether the file is an image or a video <br>
+          4. Click download and wait for a few mins. 
+        </p>
+      </div>
       <h1>IG Downloader</h1>
       <form action="/download" method="post">
           <div>
@@ -36,5 +50,7 @@
           {{ message }}
       </form>
     </div>
+
+    <script src="/static/main.js"></script>
   </body>
 </html>
