--- a/static/styles.css
+++ b/static/styles.css
@@ -21,6 +21,15 @@ body{
     box-shadow: 0px 3px 27px 1px rgba(255, 255, 255, 0.75);
 }
 
+.info-btn{
+    cursor: pointer;
+    padding: .5rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 1rem;
+}
+
 h1{
     text-align: center;
     margin-bottom: 2rem;
@@ -70,4 +79,38 @@ input[type=text] {
       border-radius: 1rem;
       font-size: 1rem;
       cursor: pointer;
+  }
+
+  .modal{
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+
+  .instructions{
+    background-color: #fefefe;
+    margin: 15% auto; /* 15% from the top and centered */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 22rem;
+    border-radius: 1rem;
+    position: relative;
+  }
+
+  .close {
+    color: red;
+    font-weight: bolder;
+    cursor: pointer;
+    position: absolute;
+    top: 5px;
+    right: 8px;
+    font-size: 28px;
+    font-weight: bold;
   }
